Выполнить проект спринта 12