@@ -1,18 +1,23 @@
 package ru.yandex.practicum.filmorate.service;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.user.UserStorage;
 
-import java.util.*;
+import java.util.Collection;
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 public class UserService {
+
     private final UserStorage userStorage;
 
     @Autowired
-    public UserService(UserStorage userStorage) {
+    public UserService(@Qualifier("dbUserStorage") UserStorage userStorage) {
         this.userStorage = userStorage;
     }
 
@@ -21,56 +26,40 @@ public class UserService {
     }
 
     public User addUser(User user) {
-        return userStorage.addUser(user);
+        userStorage.createUser(user);
+        return user;
     }
 
     public User updateUser(User user) {
-        return userStorage.updateUser(user);
+        userStorage.updateUser(user);
+        return user;
     }
 
     public User getUserById(Long id) {
         return userStorage.getUserById(id);
     }
 
-    // Добавляет двух пользователей в друзья друг другу.
     public void addFriend(Long userId, Long friendId) {
-        // Проверяем существование обоих пользователей
-        userStorage.getUserById(userId); // Выбросит исключение, если пользователь не найден
-        userStorage.getUserById(friendId);
         userStorage.addFriend(userId, friendId);
     }
 
-    //Удаляет двух пользователей из списка друзей друг друга.
     public void removeFriend(Long userId, Long friendId) {
-        // Проверяем существование обоих пользователей
-        userStorage.getUserById(userId); // Выбросит исключение, если пользователь не найден
-        userStorage.getUserById(friendId);
         userStorage.removeFriend(userId, friendId);
     }
 
-    // Возвращает список друзей пользователя
     public List<User> getFriends(Long userId) {
-        // Проверяем существование пользователя
-        userStorage.getUserById(userId); // Выбросит исключение, если пользователь не найден
-
-        return userStorage.getFriends(userId).stream()
+        Set<Long> friendIds = userStorage.getFriends(userId);
+        return friendIds.stream()
                 .map(userStorage::getUserById)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    // Возвращает список общих друзей двух пользователей.
     public List<User> getCommonFriends(Long userId, Long otherUserId) {
-        // Проверяем существование обоих пользователей
-        userStorage.getUserById(userId); // Выбросит исключение, если пользователь не найден
-        userStorage.getUserById(otherUserId);
-
-        // Находим пересечение множеств друзей
         Set<Long> userFriends = userStorage.getFriends(userId);
         Set<Long> otherUserFriends = userStorage.getFriends(otherUserId);
-
         return userFriends.stream()
                 .filter(otherUserFriends::contains)
                 .map(userStorage::getUserById)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
